facebook meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
 <title>CLaUn.vs.SnaKe</title>
 <link rel="stylesheet" href="style.css">
+
+<meta property="og:title" content="CLaUn.vs.SnaKe"/>
+<meta property="og:description" content="This Game Was Designed By A 9-Year-Old"/>
+<meta property="og:image" content="http://bschug.github.io/CLaUn.vs.SnaKe/img/screenshot.jpg"/>
+
 </head>
 <body>
 
